# crypto-predict

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.historical.yaml  docker-compose.yaml  ideas.MD  pyproject.toml  pyrightconfig.json  ruff.toml
.docker/: Dockerfile  Makefile  entrypoint.sh  indicators.compose.yaml  indicators_historical.compose.yaml  install_service_deps.sh  messagebus.compose.yaml  messagebus.docker-compose.yaml  predictions_store.compose.yaml  sentiment-signals.compose.yaml  sentiment_signals.compose.yaml  sentiment_signals_historical.compose.yaml
libs/domain/: pyproject.toml
libs/domain/domain/: candles.py  core.py  llm.py  news.py  sentiment_analysis.py  ta.py  trades.py
libs/domain/tests/: test_sentiment_analysis.py
services/candles/: .env.example  README.md  pyproject.toml
services/candles/candles/: __init__.py  main.py  stream.py
services/candles/candles/core/: settings.py
services/features/: .env.example  pyproject.toml
services/features/features/: __init__.py  main.py  schemas.py  stream.py
services/features/features/core/: settings.py
services/features/features/sinks/: hopsworks.py
services/news/: .env.example  pyproject.toml
services/news-signals/: hello.py  pyproject.toml
services/news/news/: main.py  stream.py
services/news/news/core/: settings.py
services/news/news/outlets/: __init__.py  cryptopanic.py
services/news_signals/: .env.example  pyproject.toml
services/news_signals/etl/: cryptopanic_news_csv_to_instruction_dataset.py
services/news_signals/news_signals/: .env.example  __init__.py  main.py  stream.py
services/news_signals/news_signals/core/: settings.py
services/news_signals/news_signals/signals/: __init__.py  analyzer.py  anthropic.py  ollama.py
services/news_signals/tests/: test_sentiment_analyzer.py
services/price_predictions/: .env.example  pyproject.toml
services/price_predictions/price_predictions/: __init__.py  fstore.py  main.py  predictor.py  stream.py
services/price_predictions/price_predictions/core/: settings.py
services/price_predictions/price_predictions/model/: base.py  xgboost.py
services/price_predictions/price_predictions/sinks/: elastic_search.py
services/price_predictions/training/: train_model.py
services/ta/: .env.example  README.md  pyproject.toml
services/ta/ta/: main.py  stream.py
services/ta/ta/core/: settings.py
services/trades/: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
services/trades/trades/: __init__.py  kraken.py  main.py  stream.py  trade.py
services/trades/trades/core/: settings.py
services/trades/trades/exchanges/: client.py  kraken.py
services/trades/trades/kraken/: trade.py
