[project]
name = "news_signals"
version = "0.1.0"
description = "News signals microservice"
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
domain = { workspace = true }