[project]
name = "trades"
version = "0.1.0"
description = "Trades microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.5",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "quixstreams>=3.3.0",
    "websockets>=14.1",
]

[dependency-groups]
ci = ["pyright>=1.1.389", "pytest>=8.3.4", "ruff>=0.8.1"]
